fix z index on mobile nav

--- a/src/components/project/style.module.scss
+++ b/src/components/project/style.module.scss
@@ -4,7 +4,7 @@
 
 .project {
   width: 100%;
-  z-index: 100;
+  z-index: 5;
   position: relative;
   margin-bottom: 6rem;
 }
